--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
-    "swr": "^2.1.1",
-    "typescript": "5.0.2"
+    "sharp": "^0.32.0",
+    "swr": "^2.1.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
   }
 }
